# langchain-snowflake

./: .gitignore  README.md
.github/: dependabot.yml
.github/scripts/: check_diff.py
.github/workflows/: _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml
libs/snowflake/: .gitignore  DEVELOPMENT.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
libs/snowflake/docs/: advanced_patterns.ipynb  getting_started.ipynb  mcp_integration.ipynb  retrievers.ipynb  snowflake_workflows.ipynb
libs/snowflake/langchain_snowflake/: __init__.py  _error_handling.py  _validation_utils.py  formatters.py  mcp_integration.py  retrievers.py
libs/snowflake/langchain_snowflake/_connection/: __init__.py  auth_utils.py  base.py  rest_client.py  session_manager.py  sql_client.py
libs/snowflake/langchain_snowflake/agents/: __init__.py  base.py  feedback.py  management.py  runs.py  schemas.py  threads.py
libs/snowflake/langchain_snowflake/chat_models/: __init__.py  auth.py  base.py  streaming.py  structured_output.py  tools.py  utils.py
libs/snowflake/langchain_snowflake/tools/: __init__.py  _base.py  analyst.py  cortex_functions.py  query.py
libs/snowflake/tests/: README.md  __init__.py  conftest.py
libs/snowflake/tests/integration_tests/: test_create_thread_live.py  test_retrievers.py  test_streaming.py
libs/snowflake/tests/unit_tests/: __init__.py  test_chat_models.py  test_connection.py  test_empty_payload_bug.py  test_imports.py  test_retrievers.py  test_standard_tests.py  test_streaming_tool_calls.py  test_tool_message_grouping.py  test_tools.py  test_utilities.py
